--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     </fieldset>
 
                     <p class="Save" id="TotalSave"></p>
-                    <p class="Save" id="save-value-r">R<span id="save-value"></span></p>
+                    <p class="Save" id="save-value-r">
+                        R<span id="save-value"></span><span id="per-month">/pm</span>
+                    </p>
                     <p></p>
                     <button id="submit" onclick="calculateSaving()" type="button">Get Estimate</button>
 
